fix image alignment

--- a/recipes/style.css
+++ b/recipes/style.css
@@ -38,4 +38,9 @@ p {
 
 img {
     border-radius: 10%;
+    height: 320px;
+    width: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
